Angular version 11 implemented

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    margin: 1px;
+    padding: 1px;
+  }
+  button {
+      width: 15%;
+  }
